# ct_math

./: .gitignore  CMakeLists.txt  Makefile  README.md
ext/: CMakeLists.txt
ext/Catch2/: CMakeLists.txt  catch.hpp  catch_with_main.cpp
include/: ceil.hpp  ciel.hpp  ct_math.hpp  floor.hpp  fmod.hpp  helper_functions.hpp  known_values.hpp  rint.hpp  round.hpp  trunc.hpp
tests/: CMakeLists.txt  ct_math_test_helper.hpp  floor_test.cpp  funciton_tests.cpp  function_tests.cpp  rounding_and_remainder.cpp
